feat(coupon): 优惠券后端能力增强
1. 优惠券领取使用乐观锁原子扣减库存，解决高并发超领问题
   - UmsMemberCouponServiceImpl 通过 LambdaUpdateWrapper 条件更新库存，仅库存>0才扣减
   - 同步更新已领取数量 receiveCount，数据库层面保证并发安全
2. 后台新增指定商品优惠券搜索优化
   - PmsProductServiceImpl 商品列表查询同时匹配商品名称、货号productSn模糊检索
3. 业务约束补充：领券需校验库存、领取时间、单人限领数量，禁止先查后更新非原子逻辑

关联表：sms_coupon、sms_coupon_history、优惠券商品/分类关联表